--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+
+    *::-webkit-scrollbar {
+        display: block;
+        width: 13px;
+    }
+
+    *::-webkit-scrollbar-button {
+        display: none;
+    }
+
+    *::-webkit-scrollbar-track {
+        background-color: #00000000;
+    }
+
+    *::-webkit-scrollbar-track-piece {
+        background-color: #00000000;
+    }
+
+    @media (hover: hover) {
+        body {
+            overflow: overlay;
+        }
+    }
+
+    * {
+        --scrollbar-color: theme(colors.sky.600 / 75%)
+    }
+
+    *:hover,
+    *:focus,
+    *:focus-within {
+        --scrollbar-color: theme(colors.sky.600 / 40%) !important;
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background-color: #00000000;
+        border: 3px solid transparent;
+        border-radius: 24px;
+        box-shadow: 4px 0px 0px 4px var(--scrollbar-color) inset;
+    }
+
+    *::-webkit-scrollbar-thumb:hover {
+        background-color: var(--scrollbar-color);
+        border: 0px solid transparent;
+        box-shadow: none;
+    }
+}
