--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    @font-face {
+        font-family: 'Merriweather';
+        font-style: normal;
+        font-weight: 400;
+        src: url('../css/fonts/Merriweather-Regular.ttf');
+    }
+    @font-face {
+        font-family: 'Merriweather';
+        font-style: normal;
+        font-weight: 300;
+        src: url('../css/fonts/Merriweather-Light.ttf');
+    }
+    @font-face {
+        font-family: 'Merriweather';
+        font-style: normal;
+        font-weight: 700;
+        src: url('../css/fonts/Merriweather-Bold.ttf');
+    }
+    @font-face {
+        font-family: 'Merriweather';
+        font-style: normal;
+        font-weight: 900;
+        src: url('../css/fonts/Merriweather-Black.ttf');
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Merriweather', serif;
+    }
+}
+
 @layer utilities {
 
     *::-webkit-scrollbar {
