--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,7 +31,12 @@
         src: url('fonts/Merriweather-Black.ttf');
     }
 
-    h1, h2, h3, h4, h5, h6 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         font-family: 'Merriweather', serif;
     }
 }
@@ -40,9 +45,32 @@
 
     @media screen and (min-width: 640px) {
 
+        body {
+            overflow: overlay;
+        }
+
+        * {
+            --scrollbar-color: theme(colors.sky.600 / 75%);
+            scrollbar-width: thin;
+            scrollbar-color: var(--scrollbar-color);
+        }
+
         *::-webkit-scrollbar {
             display: block;
-            width: 13px;
+            width: 12px;
+            height: 12px;
+        }
+
+        *::-webkit-scrollbar-thumb {
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            background: var(--scrollbar-color);
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+        }
+
+        ::-webkit-scrollbar-thumb:window-inactive {
+            --scrollbar-color: theme(colors.sky.600 / 40%) !important;
+            background: var(--scrollbar-color);
         }
 
         *::-webkit-scrollbar-button {
@@ -50,40 +78,13 @@
         }
 
         *::-webkit-scrollbar-track {
-            background-color: #00000000;
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
         }
 
         *::-webkit-scrollbar-track-piece {
-            background-color: #00000000;
-        }
-
-        @media (hover: hover) {
-            body {
-                overflow: overlay;
-            }
-        }
-
-        * {
-            --scrollbar-color: theme(colors.sky.600 / 75%)
-        }
-
-        *:hover,
-        *:focus,
-        *:focus-within {
-            --scrollbar-color: theme(colors.sky.600 / 40%) !important;
-        }
-
-        *::-webkit-scrollbar-thumb {
-            background-color: #00000000;
-            border: 3px solid transparent;
-            border-radius: 24px;
-            box-shadow: 4px 0px 0px 4px var(--scrollbar-color) inset;
-        }
-
-        *::-webkit-scrollbar-thumb:hover {
-            background-color: var(--scrollbar-color);
-            border: 0px solid transparent;
-            box-shadow: none;
+            background-color: #ffffff44;
         }
     }
 }
