--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,23 @@
 @tailwind utilities;
 
 @layer base {
+
+    /* Webfont: Guttie-Regular */
+    @font-face {
+        font-family: 'Guttie';
+        src: url('fonts/Guttie.eot');
+        /* IE9 Compat Modes */
+        src: url('fonts/Guttie.eot?#iefix') format('embedded-opentype'),
+            /* IE6-IE8 */
+            url('fonts/Guttie.woff') format('woff'),
+            /* Modern Browsers */
+            url('fonts/Guttie.ttf') format('truetype');
+        /* Safari, Android, iOS */
+        font-style: normal;
+        font-weight: normal;
+        text-rendering: optimizeLegibility;
+    }
+
     @font-face {
         font-family: 'Merriweather';
         font-style: normal;
@@ -31,7 +48,10 @@
         src: url('fonts/Merriweather-Black.ttf');
     }
 
-    h1,
+    h1 {
+        font-family: "Guttie", Georgia;
+    }
+
     h2,
     h3,
     h4,
