--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -79,4 +79,21 @@
             background-color: #ffffff44;
         }
     }
+
+    @variants responsive {
+        .text-shadow-outline {
+            text-shadow: 1px 1px 0 var(--tw-shadow-color),
+                -1px 1px 0 var(--tw-shadow-color),
+                1px -1px 0 var(--tw-shadow-color),
+                -1px -1px 0 var(--tw-shadow-color);
+        }
+
+        .text-shadow {
+            text-shadow: 1px 1px 7px var(--tw-shadow-color);
+        }
+
+        .text-shadow-none {
+            text-shadow: none;
+        }
+    }
 }
